# Jaccard-ML

./: .gitignore  CMakeLists.txt  README.md  ml_model.ipynb  ml_model.py  truba_script.slurm
example_values/: py_calc_values.txt  values.txt
json/: CMakeLists.txt  json.cc  json.h
parameters/: experiment.json
slurm_scripts/: tosun_experiment.slurm  truba_script.slurm
src/: CMakeLists.txt  config.h.in  edge_metrics.cu  edge_metrics_binning.cu  edge_metrics_binning.h  generate_explicit_instantiations.py  gpu_utils.cu  io.h  json.cc  json.h  main.cu  metric_formulas.h  utils.cuh
